[package]
name = "bloomz"
version = "0.1.0"
edition = "2024"
description = "bloomz: a fast, flexible bloom filter for rust"
repository = "https://github.com/pixperk/bloomz"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
ahash = { version = "0.8", optional = true }
xxhash-rust = { version = "0.8", optional = true }
rayon = { version = "1.7", optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_bytes"]
fast-ahash = ["dep:ahash"]
fast-xxh3 = ["dep:xxhash-rust"]
rayon = ["dep:rayon"]